RESOLVED FIXED184705
JSGenericTypedArrayView<>::visitChildren has a race condition reading m_mode and m_vector
https://bugs.webkit.org/show_bug.cgi?id=184705
Summary JSGenericTypedArrayView<>::visitChildren has a race condition reading m_mode ...
Filip Pizlo
Reported 2018-04-17 11:59:53 PDT
Patch forthcoming.
Attachments
the patch (4.34 KB, patch)
2018-04-17 12:13 PDT, Filip Pizlo
msaboff: review+
Filip Pizlo
Comment 1 2018-04-17 12:13:32 PDT
Created attachment 338140 [details] the patch
Michael Saboff
Comment 2 2018-04-17 12:43:25 PDT
Comment on attachment 338140 [details] the patch r=me
Filip Pizlo
Comment 3 2018-04-17 12:56:47 PDT
Radar WebKit Bug Importer
Comment 4 2018-04-17 13:02:43 PDT
Note You need to log in before you can comment on or make changes to this bug.